--- a/templates/lx_header.html
+++ b/templates/lx_header.html
@@ -22,7 +22,7 @@
          <{foreach item=catlinks from=$block0.categories}>
 		   <{if $catlinks.image != "" && $show_screenshot == '1'}>
 		   <a href="<{$xoops_url}>/modules/<{$lang_moduledirname}>/category.php?categoryID=<{$category.id}>" target="_parent">
-		   <img src="<{$xoops_url}>/modules/lexikon/images/uploads/<{$catlinks.image}>" width="<{$logo_maximgwidth}>" align="middle" alt="[<{$catlinks.total}>]" /></A>
+		   <img src="<{$xoops_url}>/uploads/<{$lang_moduledirname}>/categories/images/<{$catlinks.image}>" width="<{$logo_maximgwidth}>" align="middle" alt="[<{$catlinks.total}>]" /></A>
  		   <{/if}>
            <{if $catlinks.total > 0}><a href="<{$xoops_url}>/modules/<{$lang_moduledirname}>/category.php?categoryID=<{$catlinks.id}>" title="[<{$catlinks.total}>]"><{/if}><{$catlinks.linktext}>
            <{if $catlinks.total > 0}></a> <{/if}>[<{$catlinks.total}>] | 
