--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,7 +279,7 @@ p {
 /* layout categoryimage*/
 img.floatLeft {
     float: left;
-    margin: 0px 0px 0 0;
+    margin: 0 0 0 0;
     border: 0;
     overflow: hidden;
 }
